# unbag-rs

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/ros1/: deserializer.rs  mod.rs  msg.rs
